--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TRESH</title>
+    <link rel="stylesheet" href="stylesheets/style.css" />
   </head>
   <body>
-    x
+<body>
+    <section class="screen one">
+      <div class="ribbon">
+        <div class="ribbon-track">
+          <span>ТРЕШ</span><span>ТРЕШ</span><span>ТРЕШ</span><span>ТРЕШ</span><span>ТРЕШ</span><span>ТРЕШ</span>
+          <span>ТРЕШ</span><span>ТРЕШ</span><span>ТРЕШ</span><span>ТРЕШ</span><span>ТРЕШ</span><span>ТРЕШ</span>
+        </div>
+      </div>
+
+      <div class="corp">КОРПОРАЦИЯ</div>
+
+      <div class="trash-bag"></div>
+    </section>
+
+    <section class="screen two">
+
+      
+    </section>
+    <section class="screen three"></section>
+    <section class="screen four"></section>
   </body>
 </html>
