--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
   </section>
   <section class="screen four">
     
-
+<div class="swamp-wrap">
+  <img class="swamp" src="Images/svg/swamp.svg" alt="">
+</div>
 
 
 <img class="pipe pipe-left" src="Images/svg/pipe.svg" alt="">
